Рефакторинг маршрутизатора: интерфейс Router теперь абстрактный, добавлен класс UpdateRouter для обработки обновлений. Введен UpdateContext для унификации работы с обновлениями.